[4.0] Fixing badge display and default home menu item star alignment

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -183,7 +183,7 @@
   }
 
   span.fas {
-    padding: 1rem 0;
+    padding: 0.9rem 0;
   }
 
   .sidebar-item-title {
@@ -361,7 +361,7 @@
   }
 
   .home-image {
-    padding: .7rem .4rem;
+    padding: .8rem 0 !important;
   }
 
   .mm-collapse {
@@ -442,7 +442,7 @@
 
   .badge {
     align-self: center;
-    margin: 0 4px;
+    margin: 0 .3rem .25rem;
   }
 }
 
