--- a/administrator/templates/atum/scss/pages/_com_cpanel.scss
+++ b/administrator/templates/atum/scss/pages/_com_cpanel.scss
@@ -182,6 +182,19 @@
     }
   }
 
+  .list-group-item a > span.home-image.fas {
+    display: inline;
+    padding: 0;
+    font-size: .9rem;
+    color: rgba(1, 1, 1, 1);
+    background: var(--white-offset);
+    box-shadow: none;
+
+    &:hover {
+      background: var(--atum-link-hover-color);
+    }
+  }
+
   h2 {
     font-size: $h4-font-size;
   }
